# Tripwire

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: 01_bug.md
.github/workflows/: release-docs.yml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/macros/: Cargo.toml
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: reqwest_client.rs
crates/story/: Cargo.toml
crates/story/examples/: brush.rs  dock.rs  editor.rs  html.rs  large-text.rs  markdown.rs  stream_markdown.rs  tiles.rs
crates/story/examples/fixtures/: test.kt  test.php  test.svelte
crates/story/src/: app_menus.rs  lib.rs  main.rs  title_bar.rs
crates/story/src/stories/: alert_story.rs  breadcrumb_story.rs  button_story.rs  checkbox_story.rs  color_picker_story.rs  description_list_story.rs  dialog_story.rs  group_box_story.rs  hover_card_story.rs  kbd_story.rs  list_story.rs  menu_story.rs  mod.rs  notification_story.rs  pagination_story.rs  popover_story.rs  progress_story.rs  radio_story.rs  rating_story.rs  scrollbar_story.rs  select_story.rs  settings_story.rs  sheet_story.rs  skeleton_story.rs  stepper_story.rs  table_story.rs  tabs_story.rs  tree_story.rs  welcome_story.rs
crates/story/src/stories/chart_story/: chart_story.rs  stacked_bar_chart.rs
crates/story/src/stories/theme_story/: checkerboard.rs
crates/tripwire/: Cargo.toml
crates/tripwire/src/: actions.rs  app.rs  auth_state.rs  main.rs  mock_data.rs  models.rs  titlebar.rs
crates/tripwire/src/app/: auth_view.rs
crates/tripwire/src/app/app_view/: announcement_channel.rs  channel_list.rs  chat_area.rs  dm_list.rs  forum_channel.rs  gallery_channel.rs  members_panel.rs  mod.rs  profile_card.rs  server_list.rs  stage_channel.rs  thread_sidebar.rs  voice_channel.rs  voice_controls_bar.rs
crates/tripwire/src/app/app_view/server_settings/: mod.rs
crates/tripwire/src/app/app_view/server_settings/screens/: channels.rs  members.rs  mod.rs  overview.rs  roles.rs
crates/tripwire/src/app/app_view/settings/: mod.rs
crates/tripwire/src/app/app_view/settings/screens/: about.rs  account.rs  appearance.rs  keybindings.rs  language.rs  mod.rs  notifications.rs  privacy.rs
crates/ui/: Cargo.toml
crates/ui/src/: actions.rs  color_picker.rs  dialog.rs  geometry.rs  hover_card.rs  icon.rs  kbd.rs  lib.rs  notification.rs  popover.rs  root.rs  select.rs  sheet.rs  slider.rs  tree.rs  window_border.rs  window_ext.rs
crates/ui/src/avatar/: avatar.rs  avatar_group.rs  mod.rs
crates/ui/src/button/: button.rs  button_group.rs
crates/ui/src/dock/: dock.rs  state.rs  tab_panel.rs
crates/ui/src/highlighter/: highlighter.rs  languages.rs  registry.rs
crates/ui/src/input/: blink_cursor.rs  element.rs  input.rs  mod.rs  movement.rs  number_input.rs  selection.rs  state.rs  text_wrapper.rs
crates/ui/src/input/lsp/: document_colors.rs
crates/ui/src/input/popovers/: code_action_menu.rs  completion_menu.rs  context_menu.rs
crates/ui/src/list/: list.rs
crates/ui/src/menu/: app_menu_bar.rs  context_menu.rs  dropdown_menu.rs
crates/ui/src/plot/: tooltip.rs
crates/ui/src/plot/shape/: line.rs
crates/ui/src/progress/: progress.rs  progress_circle.rs
crates/ui/src/resizable/: panel.rs
crates/ui/src/scroll/: scrollbar.rs
crates/ui/src/setting/: item.rs  page.rs  settings.rs
crates/ui/src/setting/fields/: dropdown.rs
crates/ui/src/sidebar/: footer.rs  header.rs  mod.rs
crates/ui/src/stepper/: item.rs  trigger.rs
crates/ui/src/tab/: tab.rs
crates/ui/src/table/: mod.rs  state.rs
crates/ui/src/text/: document.rs  mod.rs  node.rs  state.rs  text_view.rs
crates/ui/src/text/format/: html.rs  markdown.rs
crates/ui/src/theme/: color.rs  default-theme.json  mod.rs  registry.rs  schema.rs
crates/ui/src/time/: calendar.rs  date_picker.rs
crates/webview/: Cargo.toml
crates/webview/src/: lib.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/docs/: assets.md  getting-started.md  index.md  root.md
docs/docs/components/: accordion.md  dialog.md  index.md  settings.md  table.md
examples/: README.md
examples/app_assets/: Cargo.toml  README.md
examples/app_assets/src/: main.rs
examples/dialog_overlay/: Cargo.toml
examples/dialog_overlay/src/: main.rs
examples/focus_trap/: Cargo.toml
examples/focus_trap/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/input/: Cargo.toml
examples/input/src/: main.rs
examples/system_monitor/: Cargo.toml
examples/system_monitor/src/: main.rs
examples/webview/: Cargo.toml
examples/webview/src/: main.rs
examples/window_title/: Cargo.toml
examples/window_title/src/: main.rs
script/: bump-version.sh
