[package]
name = "tripwire"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "tripwire"
path = "src/main.rs"

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
