[package]
name = "window_title"
description = "An example of using gpui-component to create a window with a custom title bar."
version = "0.5.1"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

[lints]
workspace = true
